--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "a backend youtube",
+  "type": "commonjs",
   "keywords": [
     "javascript",
     "backend"
   ],
   "license": "ISC",
   "author": "yugesh pandey",
-  "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
