--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,11 @@
 PORT=3000
 MONGODB_URI=mongodb://localhost:27017/myDatabase
 CORS_ORIGIN=*
+
+
+ACCESS_TOKEN_SECRET = 
+
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET= backend
+REFRESH_TOKEN_EXPIRY=10d
+
